crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__predicates__select_where_album_id_less_than.snap
---
source: crates/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": []
  }
]
