crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__predicates__select_where_array_relationship.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "Santana",
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        }
      }
    ]
  }
]
