crates/tests/databases-tests/src/aurora/snapshots/databases_tests__aurora__query_tests__predicates__select_where_in_variable.snap
---
source: crates/tests/databases-tests/src/aurora/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1
        ]
      }
    ]
  },
  {
    "rows": []
  }
]
